# MethyAnalysis

./: .gitignore  CMakeLists.txt  README.md  clean.sh
cmake/: libzlog.cmake
etc/: zlog_methyprofile.conf
include/: config.h  profile_node.h
scripts/: clean_libzlog.sh
src/MethyProfile-GUI/: CMakeLists.txt  interface.cpp  interface.h  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_config.h  my_error.hpp
src/tool/: .gitignore
src/tool/MethyDump/: CMakeLists.txt  main.cpp  my_config.h
src/tool/MethyProfile/: .gitignore  CMakeLists.txt  bed.cpp  bed.h  config.h  main.cpp  merror.h  my_config.h  profile_node.h  readme.md
src/tool/MethyProfile/etc/: Makefile  save.c
src/tool/MethyProfile/plug-in/libsave/: .gitignore  CMakeLists.txt  Makefile  save.c
